--- a/app/stylesheets/main.less
+++ b/app/stylesheets/main.less
@@ -1,25 +1,8 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
+    padding: 0;
+    margin: 0;
 }
-
-a {
-    text-decoration: none;
-}
-
-.container {
-    text-align: center;
-}
-
-.subtitle {
-    color: gray;
+html, body, #pinpoint, #map {
+    height: 100%;
+    width: 100%;
 }
