added settings radio buttons

--- a/css/main.styl
+++ b/css/main.styl
@@ -40,6 +40,10 @@ max-height: 700px !important;
   	width: 8%;
 }
 
+.settings-label{
+	margin-right: 10px;
+}
+
 #help-panel .panel-heading .panel-title::before {
 	font-family: FontAwesome;
 	content: '\f059';
