added local api

--- a/css/main.styl
+++ b/css/main.styl
@@ -50,3 +50,8 @@ max-height: 700px !important;
 	display: inline-block;
   	width: 8%;
 }
+
+.leaflet-container.dark .leaflet-control .leaflet-control-mapbox-geocoder-results a:hover, .leaflet-control-mapbox-geocoder-results a:hover {
+  width: 100% !important;
+  text-align: left;
+}
